phase 4 music uploaded

--- a/jubeat-1.html
+++ b/jubeat-1.html
@@ -85,12 +85,27 @@ function preload() {
     game.load.audio('paris_076', 'assets/The Chainsmokers - Paris/paris_076.wav');
     game.load.audio('paris_077', 'assets/The Chainsmokers - Paris/paris_077.wav');
     game.load.audio('paris_078', 'assets/The Chainsmokers - Paris/paris_078.wav');
+    game.load.audio('paris_079', 'assets/The Chainsmokers - Paris/paris_079.wav');
+    game.load.audio('paris_080', 'assets/The Chainsmokers - Paris/paris_080.wav');
+    game.load.audio('paris_081', 'assets/The Chainsmokers - Paris/paris_081.wav');
+    game.load.audio('paris_082', 'assets/The Chainsmokers - Paris/paris_082.wav');
+    game.load.audio('paris_083', 'assets/The Chainsmokers - Paris/paris_083.wav');
+    game.load.audio('paris_084', 'assets/The Chainsmokers - Paris/paris_084.wav');
+    game.load.audio('paris_085', 'assets/The Chainsmokers - Paris/paris_085.wav');
+    game.load.audio('paris_086', 'assets/The Chainsmokers - Paris/paris_086.wav');
+    game.load.audio('paris_087', 'assets/The Chainsmokers - Paris/paris_087.wav');
+    game.load.audio('paris_088', 'assets/The Chainsmokers - Paris/paris_088.wav');
+    game.load.audio('paris_089', 'assets/The Chainsmokers - Paris/paris_089.wav');
+    game.load.audio('paris_090', 'assets/The Chainsmokers - Paris/paris_090.wav');
+    game.load.audio('paris_091', 'assets/The Chainsmokers - Paris/paris_091.wav');
+    game.load.audio('paris_092', 'assets/The Chainsmokers - Paris/paris_092.wav');
+    game.load.audio('paris_093', 'assets/The Chainsmokers - Paris/paris_093.wav');
 
 }
 
 var background;
 
-var paris_001,paris_002,paris_003,paris_004,paris_005,paris_006,paris_007,paris_008,paris_009,paris_010,paris_011,paris_012,paris_013,paris_014,paris_015,paris_016,paris_017,paris_018,paris_019,paris_020,paris_021,paris_022,paris_030,paris_031,paris_032,paris_033,paris_034,paris_035,paris_036,paris_037,paris_038,paris_039,paris_047,paris_048,paris_049,paris_050,paris_051,paris_052,paris_053,paris_054,paris_055,paris_056,paris_057,paris_058,paris_059,paris_060,paris_061,paris_062,paris_063,paris_064,paris_065,paris_066,paris_067,paris_068,paris_069,paris_070,paris_071,paris_072,paris_073,paris_074,paris_075,paris_076,paris_077,paris_078;
+var paris_001,paris_002,paris_003,paris_004,paris_005,paris_006,paris_007,paris_008,paris_009,paris_010,paris_011,paris_012,paris_013,paris_014,paris_015,paris_016,paris_017,paris_018,paris_019,paris_020,paris_021,paris_022,paris_030,paris_031,paris_032,paris_033,paris_034,paris_035,paris_036,paris_037,paris_038,paris_039,paris_047,paris_048,paris_049,paris_050,paris_051,paris_052,paris_053,paris_054,paris_055,paris_056,paris_057,paris_058,paris_059,paris_060,paris_061,paris_062,paris_063,paris_064,paris_065,paris_066,paris_067,paris_068,paris_069,paris_070,paris_071,paris_072,paris_073,paris_074,paris_075,paris_076,paris_077,paris_078,paris_079,paris_080,paris_081,paris_082,paris_083,paris_084,paris_085,paris_086,paris_087,paris_088,paris_089,paris_090,paris_091,paris_092,paris_093;
 var phase1;
 var phase2;
 var phase3;
@@ -172,6 +187,21 @@ function create() {
     paris_076 = game.add.audio('paris_076');
     paris_077 = game.add.audio('paris_077');
     paris_078 = game.add.audio('paris_078');
+    paris_079 = game.add.audio('paris_079');
+    paris_080 = game.add.audio('paris_080');
+    paris_081 = game.add.audio('paris_081');
+    paris_082 = game.add.audio('paris_082');
+    paris_083 = game.add.audio('paris_083');
+    paris_084 = game.add.audio('paris_084');
+    paris_085 = game.add.audio('paris_085');
+    paris_086 = game.add.audio('paris_086');
+    paris_087 = game.add.audio('paris_087');
+    paris_088 = game.add.audio('paris_088');
+    paris_089 = game.add.audio('paris_089');
+    paris_090 = game.add.audio('paris_090');
+    paris_091 = game.add.audio('paris_091');
+    paris_092 = game.add.audio('paris_092');
+    paris_093 = game.add.audio('paris_093');
 
     paris_001.addMarker('paris_001');
     paris_002.addMarker('paris_002');
@@ -237,6 +267,21 @@ function create() {
     paris_076.addMarker('paris_076');
     paris_077.addMarker('paris_077');
     paris_078.addMarker('paris_078');
+    paris_079.addMarker('paris_079');
+    paris_080.addMarker('paris_080');
+    paris_081.addMarker('paris_081');
+    paris_082.addMarker('paris_082');
+    paris_083.addMarker('paris_083');
+    paris_084.addMarker('paris_084');
+    paris_085.addMarker('paris_085');
+    paris_086.addMarker('paris_086');
+    paris_087.addMarker('paris_087');
+    paris_088.addMarker('paris_088');
+    paris_089.addMarker('paris_089');
+    paris_090.addMarker('paris_090');
+    paris_091.addMarker('paris_091');
+    paris_092.addMarker('paris_092');
+    paris_093.addMarker('paris_093');
 
  phase1 = [paris_002,paris_003,paris_004,paris_005,paris_006,paris_007,paris_008,paris_009,paris_010,paris_011,paris_012,paris_013,paris_014,paris_015,paris_016,paris_017,paris_018,paris_019,paris_020,paris_021,paris_022,paris_030,paris_031];
 
@@ -244,11 +289,13 @@ function create() {
 
  phase3 = [paris_048,paris_049,paris_050,paris_051,paris_052,paris_053,paris_054,paris_055,paris_056,paris_057,paris_058,paris_059,paris_060,paris_061,paris_062,paris_063,paris_064,paris_065,paris_066,paris_067,paris_068,paris_069,paris_070,paris_071,paris_072,paris_073,paris_074,paris_075,paris_076,paris_077,paris_078];
 
+ phase4 = [paris_079,paris_080,paris_081,paris_082,paris_083,paris_084,paris_085,paris_086,paris_087,paris_088,paris_089,paris_090,paris_091,paris_092,paris_093];
+
 //row1
     makeButton(game.world.centerX-210, game.world.centerY-210,phase1[0],paris_001);
     makeButton(game.world.centerX-140, game.world.centerY-210,phase1[1],paris_001,phase3[29]);
     makeButton(game.world.centerX-70, game.world.centerY-210,phase1[2],paris_001,phase3[30]);
-    makeButton(game.world.centerX, game.world.centerY-210,phase1[3],paris_001);
+    makeButton(game.world.centerX, game.world.centerY-210,phase1[3],paris_001,paris_001);
     makeButton(game.world.centerX+70, game.world.centerY-210,phase1[14],paris_001,phase3[2]);
     makeButton(game.world.centerX+140, game.world.centerY-210,phase1[16],paris_001,phase3[1]);
     makeButton(game.world.centerX+210, game.world.centerY-210,phase1[18],paris_001,phase3[0]); 
@@ -259,43 +306,43 @@ function create() {
     makeButton(game.world.centerX, game.world.centerY-140,phase1[7],paris_001,phase3[25]);
     makeButton(game.world.centerX+70, game.world.centerY-140,phase1[18],paris_001,phase3[7]);
     makeButton(game.world.centerX+140, game.world.centerY-140,phase1[20],phase2[1],phase3[8]);
-    makeButton(game.world.centerX+210, game.world.centerY-140,phase1[19],paris_001);
+    makeButton(game.world.centerX+210, game.world.centerY-140,phase1[19],paris_001,paris_001);
 //row3
-    makeButton(game.world.centerX-210, game.world.centerY-70,phase1[8],paris_001);
-    makeButton(game.world.centerX-140, game.world.centerY-70,phase1[9],phase2[2]);
-    makeButton(game.world.centerX-70, game.world.centerY-70,phase1[10],paris_001);
+    makeButton(game.world.centerX-210, game.world.centerY-70,phase1[8],paris_001,paris_001);
+    makeButton(game.world.centerX-140, game.world.centerY-70,phase1[9],phase2[2],paris_001);
+    makeButton(game.world.centerX-70, game.world.centerY-70,phase1[10],paris_001,paris_001);
     makeButton(game.world.centerX, game.world.centerY-70,phase1[11],paris_001,phase3[6]);
     makeButton(game.world.centerX+70, game.world.centerY-70,phase1[13],paris_001,phase3[5]);
     makeButton(game.world.centerX+140, game.world.centerY-70,phase1[8],phase2[3],phase3[4]);
     makeButton(game.world.centerX+210, game.world.centerY-70,phase1[20],paris_001,phase3[3]);
 //row4
-    makeButton(game.world.centerX-210, game.world.centerY,phase1[8],paris_001);
-    makeButton(game.world.centerX-140, game.world.centerY,phase1[11],phase2[4]);
-    makeButton(game.world.centerX-70, game.world.centerY,phase1[1],paris_001);
+    makeButton(game.world.centerX-210, game.world.centerY,phase1[8],paris_001,paris_001);
+    makeButton(game.world.centerX-140, game.world.centerY,phase1[11],phase2[4],paris_001);
+    makeButton(game.world.centerX-70, game.world.centerY,phase1[1],paris_001,paris_001);
     makeButton(game.world.centerX, game.world.centerY,phase1[12],paris_001,phase3[10]);
     makeButton(game.world.centerX+70, game.world.centerY,phase1[15],paris_001,phase3[12]);
     makeButton(game.world.centerX+140, game.world.centerY,phase1[17],phase2[5],phase3[11]);
     makeButton(game.world.centerX+210, game.world.centerY,phase1[8],paris_001,phase3[9]); 
 //row5
-    makeButton(game.world.centerX-210, game.world.centerY+70,phase1[9],paris_001);
-    makeButton(game.world.centerX-140, game.world.centerY+70,phase1[12],phase2[6]);
-    makeButton(game.world.centerX-70, game.world.centerY+70,phase1[2],paris_001);
+    makeButton(game.world.centerX-210, game.world.centerY+70,phase1[9],paris_001,paris_001);
+    makeButton(game.world.centerX-140, game.world.centerY+70,phase1[12],phase2[6],paris_001);
+    makeButton(game.world.centerX-70, game.world.centerY+70,phase1[2],paris_001,paris_001);
     makeButton(game.world.centerX, game.world.centerY+70,phase1[14],paris_001,phase3[14]);
     makeButton(game.world.centerX+70, game.world.centerY+70,phase1[16],paris_001,phase3[16]); 
     makeButton(game.world.centerX+140, game.world.centerY+70,phase1[19],phase2[7],phase3[15]);
     makeButton(game.world.centerX+210, game.world.centerY+70,phase1[8],paris_001,phase3[13]);
 //row6   
-    makeButton(game.world.centerX-210, game.world.centerY+140,phase1[10],paris_001);
-    makeButton(game.world.centerX-140, game.world.centerY+140,phase1[13],paris_001);
-    makeButton(game.world.centerX-70, game.world.centerY+140,phase1[15],paris_001);
+    makeButton(game.world.centerX-210, game.world.centerY+140,phase1[10],paris_001,paris_001);
+    makeButton(game.world.centerX-140, game.world.centerY+140,phase1[13],paris_001,paris_001);
+    makeButton(game.world.centerX-70, game.world.centerY+140,phase1[15],paris_001,paris_001);
     makeButton(game.world.centerX, game.world.centerY+140,phase1[17],paris_001,phase3[18]);
     makeButton(game.world.centerX+70, game.world.centerY+140,phase1[18],paris_001,phase3[20]);
     makeButton(game.world.centerX+140, game.world.centerY+140,phase1[19],phase2[8],phase3[19]); 
     makeButton(game.world.centerX+210, game.world.centerY+140,phase1[20],paris_001,phase3[17]);
 //row7
-    makeButton(game.world.centerX-210, game.world.centerY+210,phase1[11],paris_001);
-    makeButton(game.world.centerX-140, game.world.centerY+210,phase1[13],paris_001);
-    makeButton(game.world.centerX-70, game.world.centerY+210,phase1[15],paris_001);
+    makeButton(game.world.centerX-210, game.world.centerY+210,phase1[11],paris_001,paris_001);
+    makeButton(game.world.centerX-140, game.world.centerY+210,phase1[13],paris_001,paris_001);
+    makeButton(game.world.centerX-70, game.world.centerY+210,phase1[15],paris_001,paris_001);
     makeButton(game.world.centerX, game.world.centerY+210,phase1[17],paris_001,phase3[22]);
     makeButton(game.world.centerX+70, game.world.centerY+210,phase1[15],paris_001,phase3[24]); 
     makeButton(game.world.centerX+140, game.world.centerY+210,phase1[21],paris_001,phase3[23]);
@@ -312,9 +359,9 @@ function create() {
 
 }
 
-function makeButton(x, y, sound1, sound2, sound3) { 
+function makeButton(x, y, sound1, sound2, sound3, sound4) { 
  
-     var button = game.add.button(x, y, 'button', function(){if(phase_mode==1)sound1.play(); else if(phase_mode==2)sound2.play(); else if(phase_mode==3)sound3.play(); }, this, 4, 3, 5); 
+     var button = game.add.button(x, y, 'button', function(){if(phase_mode==1)sound1.play(); else if(phase_mode==2)sound2.play(); else if(phase_mode==3)sound3.play(); else if(phase_mode==4)sound4.play(); }, this, 4, 3, 5); 
      button.anchor.setTo(0.5,0.5); 
      button.scale.set(0.7, 0.7); 
      button.smoothed = true; 
